<resources>
    <string name="app_name">个人账务</string>
    <string name="activity_title_login">登录</string>
    <string name="activity_title_regist">注册</string>
    <string name="activity_title_edit">编辑</string>
    <string name="activity_title_add">添加</string>
    <string name="activity_title_view">查看</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_user">用户名</string>
    <string name="prompt_repassword">请再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_regist_in">注册</string>
    <string name="register_success_to_login">注册成功，请登录！</string>
    <string name="prompt_back">返回</string>

    <string name="error_invalid_user">用户名无效</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_two_notsame">两次输入的密码不一致</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_field_required">必填项</string>
    <string name="error_register_failed">注册失败</string>
    <string name="error_init_database_failed">初始化数据库失败，请重新启动应用程序</string>

    <string name="common_str_information">提示信息</string>

    <string name="common_btn_ok">确定</string>
    <string name="common_btn_save">保存</string>
    <string name="common_btn_cancel">取消</string>
    <string name="common_btn_back">返回</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_save_failed">保存失败</string>
    <string name="common_load_failed">加载失败</string>
    <string name="common_repeat_back_key_exit">再按一次退出</string>
    <string name="common_btn_exit">切换用户</string>
    <string name="common_title_total">总计</string>
    <string name="common_value_unit_wan">万</string>
    <string name="common_value_unit_yuan">元</string>

    <string name="permission_rationale">"电子邮件需要获取联系人权限."
    </string>

    <string name="bottom_tab_home">资产</string>
    <string name="bottom_tab_summary">帐户</string>
    <string name="bottom_tab_account">收支</string>
    <string name="bottom_tab_detail">明细</string>
    <string name="bottom_tab_car">汽车</string>
    <string name="bottom_tab_setting">设置</string>

    <string name="common_all">全部</string>

    <!-- fragment home -->
    <string name="fragment_home_property_title">资产</string>
    <string name="fragment_home_debt_title">负债</string>
    <string name="fragment_home_net_assets_title">净资产</string>

    <string name="fragment_home_edit_type">类型</string>
    <string name="fragment_home_edit_name">名称</string>
    <string name="fragment_home_edit_add_image">添加图像</string>
    <string name="fragment_home_edit_remove_image">清除图像</string>
    <string name="fragment_home_edit_check_message">名称，价值和简介都不为空</string>

    <string name="fragment_edit_date_text">日期</string>
    <string name="fragment_edit_value_text">金额</string>
    <string name="fragment_edit_account_name_text">账户</string>
    <string name="fragment_edit_description_text">简介</string>
    <string name="fragment_edit_type_text">类型</string>

    <!-- fragment summary -->
    <string name="fragment_summary_title">账户概要</string>
    <string name="fragment_summary_account_name_alias">别名</string>
    <string name="fragment_summary_account_edit_check_empty">有未填写项目</string>

    <!-- fragment account -->
    <string name="fragment_account_title">总账户</string>
    <string name="fragment_account_edit_from">从</string>
    <string name="fragment_account_edit_to">到</string>
    <string name="fragment_account_edit_type_fromto">实际支出</string>
    <string name="fragment_account_edit_type_fromto_virtual">转账支出</string>
    <string name="fragment_account_edit_type_tofrom">实际收入</string>
    <string name="fragment_account_edit_type_tofrom_virtual">转账收入</string>
    <string name="fragment_account_edit_check_empty">金额和简介不能为空</string>

    <!-- fragment detail -->
    <string name="fragment_detail_title">详细费用</string>
    <!-- fragment car -->
    <string name="fragment_car_title">汽车费用</string>
    <string name="fragment_car_edit_type_car">裸车款</string>
    <string name="fragment_car_edit_type_device">周边设备</string>
    <string name="fragment_car_edit_type_oil">油钱</string>
    <string name="fragment_car_edit_type_toll">过路费</string>
    <string name="fragment_car_edit_type_park">停车费</string>
    <string name="fragment_car_edit_type_insurance">保险</string>
    <string name="fragment_car_edit_type_tax">税费</string>
    <string name="fragment_car_edit_type_care">保养</string>
    <string name="fragment_car_edit_type_repair">修车</string>
    <string name="fragment_car_edit_type_fine">罚款</string>
    <string name="fragment_car_edit_type_indemnify">赔偿</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_setting_btn_export_database">导出数据库</string>
    <string name="fragment_setting_btn_export_database_CSV">导出为CSV</string>
    <string name="fragment_setting_btn_export_database_XML">导出为XML</string>
    <string name="fragment_setting_export_success">导出成功</string>
    <string name="fragment_setting_export_failed">导出失败</string>
    <string name="fragment_setting_import_success">导入成功</string>
    <string name="fragment_setting_import_failed">导入失败</string>
    <string name="fragment_setting_btn_import_cardaccount">导入信用卡账单</string>
    <string name="fragment_setting_open_file">打开文件</string>
    <string name="fragment_setting_open_folder">选择文件夹</string>

</resources>
