<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jc.personalaccount.EditAccountItemActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <!-- date -->
        <TableRow >
            <TextView
                android:text="@string/fragment_edit_date_text"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <DatePicker
                android:id="@+id/fragment_account_edit_date"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:calendarViewShown="false"
                />

        </TableRow>

        <!-- value -->
        <TableRow>
            <TextView
                android:text="@string/fragment_edit_value_text"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/fragment_account_edit_value_text"
                android:layout_column="1"
                android:singleLine="true"/>
        </TableRow>

        <!-- from -->
        <TableRow>
            <TextView
                android:text="@string/fragment_account_edit_from"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <Spinner
                android:id="@+id/fragment_account_edit_from_spinner"

                />

        </TableRow>

        <!-- type -->
        <TableRow>
            <TextView
                android:text="@string/fragment_edit_type_text"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <Spinner
                android:id="@+id/fragment_account_edit_type_spinner"

                />

        </TableRow>

        <!-- to -->
        <TableRow>
            <TextView
                android:text="@string/fragment_account_edit_to"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <Spinner
                android:id="@+id/fragment_account_edit_to_spinner"

                />

        </TableRow>

        <!-- description -->
        <TableRow>
            <TextView
                android:text="@string/fragment_edit_description_text"
                android:layout_margin="10dp"
                android:textSize="20sp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/fragment_account_edit_description_text"
                android:layout_column="1"/>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_span="2"
                >

                <Button
                    android:id="@+id/fragment_account_edit_back_button"
                    android:text="@string/common_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/fragment_account_edit_save_button"
                    android:text="@string/common_btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"/>

            </LinearLayout>
        </TableRow>

    </TableLayout>

</ScrollView>
