<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context="com.example.jc.personalaccount.FragmentHome">

        <!-- property title -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyblue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:text="@string/fragment_home_property_title"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/fragment_home_property_add_button"
                android:text="+"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- property -->
        <ListView
            android:id="@+id/fragment_home_listview_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></ListView>

        <!-- debt title -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyblue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:text="@string/fragment_home_debt_title"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/fragment_home_debt_add_button"
                android:text="+"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- debt -->
        <ListView
            android:id="@+id/fragment_home_listview_debt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></ListView>

        <!-- net assets -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:text="@string/fragment_home_net_assets_title"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="10dp"
                >

                <TextView
                    android:id="@+id/fragment_home_net_assets_property_tv"
                    android:text="1000"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:text=" - "
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/fragment_home_net_assets_debt_tv"
                    android:textSize="25sp"
                    android:text="500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:text=" = "
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/fragment_home_net_assets_tv"
                    android:textSize="25sp"
                    android:text="500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
